--- a/2_Classical Planning/report.ipynb
+++ b/2_Classical Planning/report.ipynb
@@ -797,7 +797,7 @@
     "\n",
     "Among uninformed search methods, depth first search is the most efficient, with the least number of nodes expanded. Depth first search expands the deepest node first as opposed to _all_ the nodes in a layer as per breadth first/uniform cost search, and therefore has a much smaller branching factor. \n",
     "\n",
-    "For the search algorithms with heuristics, "
+    "For the search algorithms with heuristics, we can see that the greedy best first search does much better than a* , and that the level sum heuristic is the best in guiding the agent towards the final goal as both algorithms when using this heuristic expands the least number of nodes."
    ]
   },
   {
@@ -985,7 +985,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Measuring time complexity:  Time required vs problem size and algorithm used"
+    "### Measuring time complexity:  Time required vs problem size and algorithm used\n",
+    "\n",
+    "The following table and plot shows how the different algorithms perform in terms of time. For uniformed searches, the breadth first search takes the least time, as opposed to the depth first search, which takes much longer, especially as the problem size increases. This is because in the depth first search, if it goes down the 'wrong' path it will have to backtrack, and a bigger problem means it will spend a lot of time backtracking.\n",
+    "\n"
    ]
   },
   {
@@ -1180,6 +1183,181 @@
     "ax = pivot4.plot(title=\"Time required vs problem size for different planning search algorithms\", figsize=(12,8))\n",
     "ax.set_xlabel(\"actions\")\n",
     "ax.set_ylabel(\"time needed (s)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimality-- which algorithms can achieve the optimal (shortest plan length) solution?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>action</th>\n",
+       "      <th>20</th>\n",
+       "      <th>72</th>\n",
+       "      <th>88</th>\n",
+       "      <th>104</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>algo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>astar_search with h_pg_levelsum</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>astar_search with h_pg_maxlevel</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>astar_search with h_pg_setlevel</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>astar_search with h_unmet_goals</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>breadth_first_search</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>depth_first_graph_search</th>\n",
+       "      <td>20</td>\n",
+       "      <td>619</td>\n",
+       "      <td>392</td>\n",
+       "      <td>24132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>greedy_best_first_graph_search with h_pg_levelsum</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>greedy_best_first_graph_search with h_pg_maxlevel</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>greedy_best_first_graph_search with h_pg_setlevel</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>greedy_best_first_graph_search with h_unmet_goals</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uniform_cost_search</th>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "action                                             20   72   88     104\n",
+       "algo                                                                   \n",
+       "astar_search with h_pg_levelsum                      6    9   12     15\n",
+       "astar_search with h_pg_maxlevel                      6    9   12     14\n",
+       "astar_search with h_pg_setlevel                      6    9   12     14\n",
+       "astar_search with h_unmet_goals                      6    9   12     14\n",
+       "breadth_first_search                                 6    9   12     14\n",
+       "depth_first_graph_search                            20  619  392  24132\n",
+       "greedy_best_first_graph_search with h_pg_levelsum    6    9   14     17\n",
+       "greedy_best_first_graph_search with h_pg_maxlevel    6    9   13     17\n",
+       "greedy_best_first_graph_search with h_pg_setlevel    6    9   17     23\n",
+       "greedy_best_first_graph_search with h_unmet_goals    6    9   15     18\n",
+       "uniform_cost_search                                  6    9   12     14"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pivot5 = pd.pivot_table(df, 'plan_length', 'algo', 'action')\n",
+    "pivot5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying search algorithms to various scenarios:\n",
+    "\n",
+    "> <strong>Which algorithm or algorithms would be most appropriate for planning in a very restricted domain (i.e., one that has only a few actions) and needs to operate in real time?</strong>\n",
+    "\n",
+    "For real time, we want an algorithm that runs very fast, as well as giving a short plan length. With the exception of depth first search, all of the other algorithms give an optimal solution. Since the greedy search algorithm gives the shortest times among them as well as the least number of nodes expanded (and hence uses less memory, it is probably a good choice in this scenario.\n",
+    "\n",
+    "><strong>Which algorithm or algorithms would be most appropriate for planning in very large domains (e.g., planning delivery routes for all UPS drivers in the U.S. on a given day)</strong>\n",
+    "\n",
+    "We would need an algorithm that runs fairly fast even on large problem size (otherwise the day will be over before the planning calculation finishes), and does not expand too many nodes( otherwise the planning computation will run out of memory). A good choice is the greedy search algorithm-- even if it doesn't give the most optimal solution, the solution isn't too far off optimal, and it runs quicker and expands less nodes as problem size increases as compared to the others.\n",
+    "\n",
+    "\n",
+    "><strong>Which algorithm or algorithms would be most appropriate for planning problems where it is important to find only optimal plans?</strong>\n",
+    "\n",
+    "From the experiments, we can see that A star, breadth first and uniform cost search all return the optimal plan, even as the problem size increases. If optimality is the only consideration, all of them are appropiate choices. If we need to optimise for memory and/or time as well, then we should use A star (with unmet goal heuristic) since this algorithm + heuristic combination gives the least  increase in both memory and time as problem size increases."
    ]
   },
   {
