--- a/2_Classical Planning/report.ipynb
+++ b/2_Classical Planning/report.ipynb
@@ -8,7 +8,45 @@
     "\n",
     "In this project, a classical search agent is implemented to planning task. In this project, the planning problems are variations on an Air Cargo logistic problem-- if you have certain number of cargo and a set amount of planes, how do you get them from place to place?\n",
     "\n",
-    "11 different search algorithms are compared: 3 uninformed search methods (breadth first, depth first, and uniform cost searc), and 8 with heuristics (A star and greedy best first graph search with the heuristics of unmet goals, maxlevel, levelsum and setlevel), are tested against 4 different planning problems. The planning problems are of increasing complexity, and the searches are done through a planning graph. The code for the experiment can be found at [this github repo](https://github.com/wwymak/udacity-ai-nd-projects/tree/master/2_Classical%20Planning). All experiments are run using pypy rather than normal python to speed up calculation speeds."
+    "### Problem set:\n",
+    "The following lists the problems set\n",
+    "\n",
+    "```Note:\n",
+    "C1, C2 etc are the cargo,\n",
+    "P1, P2 etc are the planes\n",
+    "the rest, e.g. SFO are airports```\n",
+    "\n",
+    "problem1. \n",
+    "```\n",
+    "precondition: [ At(C1, SFO) AND At(C2, JFK)AND At(P1, SFO) AND At(P2, JFK) AND At(P3, ATL)]\n",
+    "goal: [At(C1, JFK) AND At(C2, SFO)]\n",
+    "```\n",
+    "\n",
+    "problem2. \n",
+    "```\n",
+    "precondition: [ At(C1, SFO) AND At(C2, JFK)  AND At(C3, ATL)  AND At(P1, SFO) AND At(P2, JFK)]\n",
+    "goal: [At(C1, JFK) AND At(C2, SFO) AND At(C3, SFO)]\n",
+    "```\n",
+    "\n",
+    "problem3. \n",
+    "```\n",
+    "precondition: [ At(C1, SFO) AND At(C2, JFK) AND At(C3, ATL) AND At(C4, ORD) AND At(P1, SFO) AND At(P2, JFK)]\n",
+    "goal: [At(C1, JFK) AND At(C2, SFO) AND At(C3, JFK) AND At(C4, SFO)]\n",
+    "```\n",
+    "\n",
+    "problem4. \n",
+    "```\n",
+    "precondition: [At(C1, SFO) AND At(C2, JFK) AND At(C3, ATL) AND At(C4, ORD) AND At(C5, ORD) AND At(P1, SFO) AND At(P2, JFK)]\n",
+    "goal: [At(C1, JFK) AND At(C2, SFO) AND At(C3, JFK) AND At(C4, SFO) AND At(C5, JFK)]\n",
+    "```\n",
+    "\n",
+    "### Experiments\n",
+    "11 different search algorithms are compared: 3 uninformed search methods (breadth first, depth first, and uniform cost searc), and 8 with heuristics (A star and greedy best first graph search with the heuristics of unmet goals, maxlevel, levelsum and setlevel), are tested against 4 different planning problems. The planning problems are of increasing complexity, and the searches are done through a planning graph. All experiments are run using pypy rather than normal python to speed up calculation speeds.\n",
+    "\n",
+    "### Code implementation\n",
+    "The code for this project is at [this github repo](https://github.com/wwymak/udacity-ai-nd-projects/tree/master/2_Classical%20Planning) Most of this is 'boilerplate' code from Udacity, and my implementation is only in the [planning graph section](https://github.com/wwymak/udacity-ai-nd-projects/blob/master/2_Classical%20Planning/my_planning_graph.py) \n",
+    "\n",
+    "_An interesting todo is to implement my own planning / search code_ 🤓 "
    ]
   },
   {
@@ -17,7 +55,7 @@
    "source": [
     "### Measuring algorithm performance\n",
     "\n",
-    "As per ref [1], the performance of search algorithms are measured in terms of:\n",
+    "As per the [AIMA book](http://aima.cs.berkeley.edu/), the performance of search algorithms are measured in terms of:\n",
     "\n",
     "> Completeness: Is the algorithm guaranteed to find a solution when there is one?\n",
     "\n",
@@ -797,7 +835,7 @@
     "\n",
     "Among uninformed search methods, depth first search is the most efficient, with the least number of nodes expanded. Depth first search expands the deepest node first as opposed to _all_ the nodes in a layer as per breadth first/uniform cost search, and therefore has a much smaller branching factor. \n",
     "\n",
-    "For the search algorithms with heuristics, we can see that the greedy best first search does much better than a* , and that the level sum heuristic is the best in guiding the agent towards the final goal as both algorithms when using this heuristic expands the least number of nodes."
+    "For the search algorithms with heuristics, we can see that the greedy best first search does much better than a* , and that the level sum heuristic is the best in guiding the agent towards the final goal as both algorithms when using this heuristic expands the least number of nodes. Since the greedy algorithm does not take into account the cost of the path it takes to reach a particular node, it does not need to consider previous nodes so it's memory requirements are smaller. "
    ]
   },
   {
@@ -988,7 +1026,8 @@
     "### Measuring time complexity:  Time required vs problem size and algorithm used\n",
     "\n",
     "The following table and plot shows how the different algorithms perform in terms of time. For uniformed searches, the breadth first search takes the least time, as opposed to the depth first search, which takes much longer, especially as the problem size increases. This is because in the depth first search, if it goes down the 'wrong' path it will have to backtrack, and a bigger problem means it will spend a lot of time backtracking.\n",
-    "\n"
+    "\n",
+    "For the informed search algorithms, we can see that the heuristic chosen has a large impact on the time, e.g. using the unmet goals heuristic is about 1000 times faster than the set level heuristic! This is likely because the more complex heuristics take longer to compute, especially if the implementation is not efficient. However, if we compare the heuristics against the node expanded, we can see that the fastest heuristics also ended up with a lot more nodes expanded."
    ]
   },
   {
@@ -1190,7 +1229,8 @@
    "metadata": {},
    "source": [
     "### Optimality-- which algorithms can achieve the optimal (shortest plan length) solution?\n",
-    "\n"
+    "\n",
+    "For the uniformed search algorithms, both breadth first and uniform cost searches are optimal. For the informed searches, both A star and greedy search are optimal for smaller problems, but as the problem size increases, A star gives the optimal solution for all the heuristics except for the level sum heuristic whereas the greedy algorithm slowly diverges away from the optimal solution-- likely because as the problem size increases, the cost of the previous path has a bigger and bigger impact on the final cost and as the previous cost is ignored in greedy search, this means it doesn't find the most optimal solution."
    ]
   },
   {
@@ -1358,6 +1398,15 @@
     "><strong>Which algorithm or algorithms would be most appropriate for planning problems where it is important to find only optimal plans?</strong>\n",
     "\n",
     "From the experiments, we can see that A star, breadth first and uniform cost search all return the optimal plan, even as the problem size increases. If optimality is the only consideration, all of them are appropiate choices. If we need to optimise for memory and/or time as well, then we should use A star (with unmet goal heuristic) since this algorithm + heuristic combination gives the least  increase in both memory and time as problem size increases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "From this set of experiments, we can see that informed search algorithms with the right heuristics can perform much better than uninformed search algorithms in terms of both speed and memory requirements, and still return optimal plans. from the experiments, the unmet goals heuristic is the most optimal for time, and the level sum heuristic is the most optimal for memory. Depending on the scenario complexity and computation requirements, we can tune the heuristic to suit."
    ]
   },
   {
