--- a/4_HMM Tagger/HMM Tagger.ipynb
+++ b/4_HMM Tagger/HMM Tagger.ipynb
@@ -945,21 +945,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your HMM network topology looks good!</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "basic_model = HiddenMarkovModel(name=\"base-hmm-tagger\")\n",
     "\n",
     "# TODO: create states with emission probability distributions P(word | tag) and add to the model\n",
     "# (Hint: you may need to loop & create/add new states)\n",
-    "basic_model.add_states()\n",
+    "states_list = []\n",
+    "tags_list = []\n",
+    "for tag, tag_counts in tag_unigrams.items():\n",
+    "    tags_list.append(tag)\n",
+    "    prob_dict = {}\n",
+    "    for word in data.training_set.vocab:\n",
+    "        if word in emission_counts[tag]:\n",
+    "            prob = emission_counts[tag][word]/tag_counts\n",
+    "        else:\n",
+    "            prob = 0\n",
+    "        prob_dict[word] = prob\n",
+    "        \n",
+    "    d = DiscreteDistribution(prob_dict)\n",
+    "    states_list.append(State(d, name=tag))\n",
+    "basic_model.add_states(*states_list)\n",
+    "\n",
+    "for idx, s in enumerate(states_list):\n",
+    "    tag = tags_list[idx]\n",
+    "    basic_model.add_transition(basic_model.start, s, tag_starts[tag]/len(data.training_set.X))\n",
+    "    basic_model.add_transition(s, basic_model.end, tag_ends[tag]/len(data.training_set.X))\n",
+    "    for idx2, s2 in enumerate(states_list):\n",
+    "        tag2 = tags_list[idx2]\n",
+    "        basic_model.add_transition(s, s2, tag_bigrams[(tag, tag2)]/tag_unigrams[tag])\n",
+    "    \n",
+    "\n",
     "\n",
     "# TODO: add edges between states for the observed transition frequencies P(tag_i | tag_i-1)\n",
     "# (Hint: you may need to loop & add transitions\n",
-    "basic_model.add_transition()\n",
+    "# basic_model.add_transition()\n",
     "\n",
     "\n",
     "# NOTE: YOU SHOULD NOT NEED TO MODIFY ANYTHING BELOW THIS LINE\n",
@@ -976,12 +1012,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training accuracy basic hmm model: 97.53%\n",
+      "testing accuracy basic hmm model: 95.96%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"alert alert-block alert-success\">Your HMM tagger accuracy looks correct! Congratulations, you've finished the project.</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hmm_training_acc = accuracy(data.training_set.X, data.training_set.Y, basic_model)\n",
     "print(\"training accuracy basic hmm model: {:.2f}%\".format(100 * hmm_training_acc))\n",
@@ -1003,11 +1060,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence Key: b100-28144\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['CONJ', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'CONJ', 'NOUN', 'NUM', '.', '.', 'NOUN', '.', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('CONJ', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'NOUN', 'NUM', '.', 'CONJ', 'NOUN', 'NUM', '.', '.', 'NOUN', '.', '.')\n",
+      "\n",
+      "\n",
+      "Sentence Key: b100-23146\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['PRON', 'VERB', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', 'NOUN', 'VERB', 'VERB', '.', 'ADP', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'DET', 'NOUN', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('PRON', 'VERB', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', 'NOUN', 'VERB', 'VERB', '.', 'ADP', 'VERB', 'DET', 'NOUN', 'ADP', 'NOUN', 'ADP', 'DET', 'NOUN', '.')\n",
+      "\n",
+      "\n",
+      "Sentence Key: b100-35462\n",
+      "\n",
+      "Predicted labels:\n",
+      "-----------------\n",
+      "['DET', 'ADJ', 'NOUN', 'VERB', 'VERB', 'VERB', 'ADP', 'DET', 'ADJ', 'ADJ', 'NOUN', 'ADP', 'DET', 'ADJ', 'NOUN', '.', 'ADP', 'ADJ', 'NOUN', '.', 'CONJ', 'ADP', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', '.', 'ADJ', '.', 'CONJ', 'ADJ', 'NOUN', 'ADP', 'ADJ', 'NOUN', '.']\n",
+      "\n",
+      "Actual labels:\n",
+      "--------------\n",
+      "('DET', 'ADJ', 'NOUN', 'VERB', 'VERB', 'VERB', 'ADP', 'DET', 'ADJ', 'ADJ', 'NOUN', 'ADP', 'DET', 'ADJ', 'NOUN', '.', 'ADP', 'ADJ', 'NOUN', '.', 'CONJ', 'ADP', 'DET', 'NOUN', 'ADP', 'ADJ', 'ADJ', '.', 'ADJ', '.', 'CONJ', 'ADJ', 'NOUN', 'ADP', 'ADJ', 'NOUN', '.')\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for key in data.testing_set.keys[:3]:\n",
     "    print(\"Sentence Key: {}\\n\".format(key))\n",
@@ -1034,11 +1129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[NbConvertApp] Converting notebook HMM Tagger.ipynb to html',\n",
+       " '[NbConvertApp] Writing 355319 bytes to HMM Tagger.html',\n",
+       " '[NbConvertApp] Converting notebook HMM warmup (optional).ipynb to html',\n",
+       " '[NbConvertApp] Writing 309843 bytes to HMM warmup (optional).html']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "!!jupyter nbconvert *.ipynb"
    ]
