--- a/3_Adversarial Search/game analysis 1.ipynb
+++ b/3_Adversarial Search/game analysis 1.ipynb
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,6 +1012,9 @@
     "                             header=None, names=['ply_count', 'depth', 'terminal', 'curr_player', 'self_id', 'cutoff_type'])\n",
     "\n",
     "dfcutoff_basic_sort_TT = pd.read_csv('./matches_cutoffs/maxdepth_alphabetaV2TT_score2_sort_TT.txt',  \n",
+    "                             header=None, names=['ply_count', 'depth', 'terminal', 'curr_player', 'self_id', 'cutoff_type'])\n",
+    "\n",
+    "dfcutoff_basic_sort_noTT = pd.read_csv('./matches_cutoffs/maxdepth_alphabetaV2TT_score2_sort_noTT.txt',  \n",
     "                             header=None, names=['ply_count', 'depth', 'terminal', 'curr_player', 'self_id', 'cutoff_type'])\n"
    ]
   },
@@ -1073,6 +1076,60 @@
    ],
    "source": [
     "len(dfcutoff_basic_sort_TT.cutoff_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ply_count</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>terminal</th>\n",
+       "      <th>curr_player</th>\n",
+       "      <th>self_id</th>\n",
+       "      <th>cutoff_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [ply_count, depth, terminal, curr_player, self_id, cutoff_type]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfcutoff_basic_sort_noTT.head()"
    ]
   },
   {
